# gscupy

./: LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.devcontainer.yml  post-create.sh
services/frame-archiver/: Dockerfile  pyproject.toml
services/frame-archiver/frame_archiver/: archiver.py
services/frame-reader/: Dockerfile  pyproject.toml
services/frame-reader/frame_reader/: reader.py
services/inference-worker/: Dockerfile  pyproject.toml
services/inference-worker/inference_worker/: worker.py
shared/: pyproject.toml
shared/gscupy/: __init__.py  keys.py
src/: archiver.py  keys.py  reader.py
test/: test_archiver.py  test_keys.py
