[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gscupy"
version = "0.1.0"
description = "Shared Redis key schema and pub/sub channel names for the CV pipeline"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
    "black>=24",
    "mypy>=1.8",
    "pre-commit>=3",
]

[tool.hatch.build.targets.wheel]
packages = ["gscupy"]