[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cv-pipeline-inference-worker"
version = "0.1.0"
description = "Redis-subscribed inference worker with CUDA IPC frame import"
requires-python = ">=3.11"
dependencies = [
    "cv-pipeline-shared",
    "redis>=5.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.2",
    "transformers>=4.40",
    "ultralytics>=8.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["inference_worker"]
